# ContextHub

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
docs/superpowers/plans/: 2026-06-13-contexthub-plan.md
docs/superpowers/specs/: 2026-06-13-contexthub-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  compression.rs  export.rs  ingestion.rs  mod.rs  project.rs  settings.rs  watcher.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/pipeline/: mod.rs  traits.rs
src-tauri/src/pipeline/analysis/: language_detect.rs  llm.rs  local_rules.rs  mod.rs
src-tauri/src/pipeline/compression/: levels.rs  mod.rs  ranker.rs  scorer.rs
src-tauri/src/pipeline/export/: claude.rs  cursor.rs  gemini.rs  markdown.rs  mod.rs
src-tauri/src/pipeline/ingestion/: filter.rs  github.rs  local_folder.rs  mod.rs
src-tauri/tests/: integration_test.rs
src/components/: FileTree.tsx  Sidebar.tsx
src/lib/: api.ts  store.ts
src/pages/: AnalysisView.tsx  Dashboard.tsx  ExportView.tsx  ProjectView.tsx  Settings.tsx  VersionDiff.tsx
